--- a/Glimpsees.ipynb
+++ b/Glimpsees.ipynb
@@ -20,16 +20,13 @@
         "# Instructions\n",
         "### 1. Upload your video file.\n",
         "### 2. Run the **Libs** command.\n",
-        "### 3. On **Pre-config** match the `file_name` variable to your uploaded video's filename.\n",
-        "This var will be used for the final downloadable ZIP and GIF (if desired) files (e.g., `faces_your_video_name.zip`, `faces_your_video_name.gif`).\n",
+        "### 3. On **Pre-config** match the `file_name` variable to the uploaded video's filename.\n",
+        "This var will be used for the final downloadable ZIP and GIF (if desired) files (e.g., `faces_my_example_video.zip`, `faces_my_example_video.gif`).\n",
         "\n",
         "### 4. On **FPS** set a custom value (optional).\n",
         "Do not change it to use original video's FPS.\n",
         "\n",
         "### 5. Run the **App** script.\n",
-        "\n",
-        "*Tested with **mp4** and **avi** files.*\n",
-        "\n",
         "### 6. Run the **GIF** script (optional)."
       ],
       "metadata": {
@@ -82,7 +79,7 @@
     {
       "cell_type": "code",
       "source": [
-        "file_name = \"cl.mp4\"\n",
+        "file_name = \"my_example_video.mp4\"\n",
         "square_size = 200   # Final saved image size in pixels (after resize)\n",
         "face_padding = 0.25 # Padding (%) to include around the face crop\n",
         "resize_crop = True  # Resize face fit to square size"
