UPDATED Glimpsees.ipynb 05/08/25

--- a/Glimpsees.ipynb
+++ b/Glimpsees.ipynb
@@ -52,9 +52,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r-0lbtofh9cA",
-        "outputId": "1bec838f-402d-4897-ef88-53410f429804"
+        "outputId": "b27f7df8-ed14-481b-e4d9-4931859f2460"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "imnWjOh8fl84",
-        "outputId": "e7223221-6e7b-4c70-d68b-1e31687ca366"
+        "outputId": "65d81a34-b9d4-412c-9cee-2cf83e908906"
       },
       "execution_count": 10,
       "outputs": [
@@ -159,6 +159,7 @@
         "output_dir = \"tracked_faces\"\n",
         "output_zip = f\"faces_{file_name.split('.', 1)[0]}\"\n",
         "frame_interval = max(1, int(original_fps // target_fps))\n",
+        "total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
         "\n",
         "if os.path.exists(output_dir):\n",
         "    shutil.rmtree(output_dir)\n",
@@ -239,8 +240,10 @@
         "\n",
         "          next_frame += frame_step\n",
         "\n",
+        "      print(f\"\\rProgress: {100 * frame_count / total_frames:.2f}%\", end=\"\")\n",
         "      frame_count += 1\n",
         "  cap.release()\n",
+        "  print(\"\\rProgress: 100%\")\n",
         "\n",
         "# ==== Main ====\n",
         "if __name__ == \"__main__\":\n",
@@ -260,9 +263,9 @@
         "id": "Vohr9I2bmG6C",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 69
         },
-        "outputId": "e258e44e-3191-4ddb-f218-e8e8489f2b2e"
+        "outputId": "487dfc72-68a3-4628-c7d8-1e319cc35585"
       },
       "execution_count": 11,
       "outputs": [
@@ -270,8 +273,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tracking done [6.75 m].\n",
-            "faces_cl.zip saved.\n"
+            "Progress: 100%\n",
+            "Tracking done [47.22 s].\n",
+            "faces_my_example_video.zip saved.\n"
           ]
         },
         {
@@ -333,7 +337,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_e935130d-e320-47fc-99bc-bf570c458596\", \"faces_cl.zip\", 7555647)"
+              "download(\"download_a4bb0ce7-2656-4291-8340-7613b2b4c589\", \"faces_my_example_video.zip\", 3552024)"
             ]
           },
           "metadata": {}
@@ -373,8 +377,16 @@
         "\n",
         "# ==== Main ====\n",
         "if __name__ == \"__main__\":\n",
+        "    start_time = time.time()\n",
+        "\n",
         "    # Load images into Pillow\n",
-        "    frames = [Image.open(os.path.join(input_dir, f)) for f in image_files]\n",
+        "    frames = []\n",
+        "    total_images = len(image_files)\n",
+        "    for i, file in enumerate(image_files, 1):\n",
+        "        image = Image.open(os.path.join(input_dir, file))\n",
+        "        frames.append(image)\n",
+        "        print(f\"\\rProgress: {100 * i / total_images:.2f}%\", end=\"\")\n",
+        "    print(\"\\rProgress: 100%\")\n",
         "\n",
         "    # GIF\n",
         "    frames[0].save(\n",
@@ -385,6 +397,9 @@
         "        duration=duration,\n",
         "        loop=0\n",
         "    )\n",
+        "\n",
+        "    end_time = time.time()\n",
+        "    print(f\"GIF done [{elapsed_time(end_time - start_time)}].\")\n",
         "    print(f\"{output_gif} saved.\")\n",
         "\n",
         "    # Download\n",
@@ -393,18 +408,20 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 69
         },
         "id": "hM6qJibt4WcI",
-        "outputId": "c7a3aa0a-ddf1-4e93-9eae-b645cf24cec1"
+        "outputId": "7c4cef83-c3eb-4ae1-fd64-378afadf22aa"
       },
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "faces_cl.gif saved.\n"
+            "\rProgress: 0.43%\rProgress: 0.85%\rProgress: 1.28%\rProgress: 1.70%\rProgress: 2.13%\rProgress: 2.55%\rProgress: 2.98%\rProgress: 3.40%\rProgress: 3.83%\rProgress: 4.26%\rProgress: 4.68%\rProgress: 5.11%\rProgress: 5.53%\rProgress: 5.96%\rProgress: 6.38%\rProgress: 6.81%\rProgress: 7.23%\rProgress: 7.66%\rProgress: 8.09%\rProgress: 8.51%\rProgress: 8.94%\rProgress: 9.36%\rProgress: 9.79%\rProgress: 10.21%\rProgress: 10.64%\rProgress: 11.06%\rProgress: 11.49%\rProgress: 11.91%\rProgress: 12.34%\rProgress: 12.77%\rProgress: 13.19%\rProgress: 13.62%\rProgress: 14.04%\rProgress: 14.47%\rProgress: 14.89%\rProgress: 15.32%\rProgress: 15.74%\rProgress: 16.17%\rProgress: 16.60%\rProgress: 17.02%\rProgress: 17.45%\rProgress: 17.87%\rProgress: 18.30%\rProgress: 18.72%\rProgress: 19.15%\rProgress: 19.57%\rProgress: 20.00%\rProgress: 20.43%\rProgress: 20.85%\rProgress: 21.28%\rProgress: 21.70%\rProgress: 22.13%\rProgress: 22.55%\rProgress: 22.98%\rProgress: 23.40%\rProgress: 23.83%\rProgress: 24.26%\rProgress: 24.68%\rProgress: 25.11%\rProgress: 25.53%\rProgress: 25.96%\rProgress: 26.38%\rProgress: 26.81%\rProgress: 27.23%\rProgress: 27.66%\rProgress: 28.09%\rProgress: 28.51%\rProgress: 28.94%\rProgress: 29.36%\rProgress: 29.79%\rProgress: 30.21%\rProgress: 30.64%\rProgress: 31.06%\rProgress: 31.49%\rProgress: 31.91%\rProgress: 32.34%\rProgress: 32.77%\rProgress: 33.19%\rProgress: 33.62%\rProgress: 34.04%\rProgress: 34.47%\rProgress: 34.89%\rProgress: 35.32%\rProgress: 35.74%\rProgress: 36.17%\rProgress: 36.60%\rProgress: 37.02%\rProgress: 37.45%\rProgress: 37.87%\rProgress: 38.30%\rProgress: 38.72%\rProgress: 39.15%\rProgress: 39.57%\rProgress: 40.00%\rProgress: 40.43%\rProgress: 40.85%\rProgress: 41.28%\rProgress: 41.70%\rProgress: 42.13%\rProgress: 42.55%\rProgress: 42.98%\rProgress: 43.40%\rProgress: 43.83%\rProgress: 44.26%\rProgress: 44.68%\rProgress: 45.11%\rProgress: 45.53%\rProgress: 45.96%\rProgress: 46.38%\rProgress: 46.81%\rProgress: 47.23%\rProgress: 47.66%\rProgress: 48.09%\rProgress: 48.51%\rProgress: 48.94%\rProgress: 49.36%\rProgress: 49.79%\rProgress: 50.21%\rProgress: 50.64%\rProgress: 51.06%\rProgress: 51.49%\rProgress: 51.91%\rProgress: 52.34%\rProgress: 52.77%\rProgress: 53.19%\rProgress: 53.62%\rProgress: 54.04%\rProgress: 54.47%\rProgress: 54.89%\rProgress: 55.32%\rProgress: 55.74%\rProgress: 56.17%\rProgress: 56.60%\rProgress: 57.02%\rProgress: 57.45%\rProgress: 57.87%\rProgress: 58.30%\rProgress: 58.72%\rProgress: 59.15%\rProgress: 59.57%\rProgress: 60.00%\rProgress: 60.43%\rProgress: 60.85%\rProgress: 61.28%\rProgress: 61.70%\rProgress: 62.13%\rProgress: 62.55%\rProgress: 62.98%\rProgress: 63.40%\rProgress: 63.83%\rProgress: 64.26%\rProgress: 64.68%\rProgress: 65.11%\rProgress: 65.53%\rProgress: 65.96%\rProgress: 66.38%\rProgress: 66.81%\rProgress: 67.23%\rProgress: 67.66%\rProgress: 68.09%\rProgress: 68.51%\rProgress: 68.94%\rProgress: 69.36%\rProgress: 69.79%\rProgress: 70.21%\rProgress: 70.64%\rProgress: 71.06%\rProgress: 71.49%\rProgress: 71.91%\rProgress: 72.34%\rProgress: 72.77%\rProgress: 73.19%\rProgress: 73.62%\rProgress: 74.04%\rProgress: 74.47%\rProgress: 74.89%\rProgress: 75.32%\rProgress: 75.74%\rProgress: 76.17%\rProgress: 76.60%\rProgress: 77.02%\rProgress: 77.45%\rProgress: 77.87%\rProgress: 78.30%\rProgress: 78.72%\rProgress: 79.15%\rProgress: 79.57%\rProgress: 80.00%\rProgress: 80.43%\rProgress: 80.85%\rProgress: 81.28%\rProgress: 81.70%\rProgress: 82.13%\rProgress: 82.55%\rProgress: 82.98%\rProgress: 83.40%\rProgress: 83.83%\rProgress: 84.26%\rProgress: 84.68%\rProgress: 85.11%\rProgress: 85.53%\rProgress: 85.96%\rProgress: 86.38%\rProgress: 86.81%\rProgress: 87.23%\rProgress: 87.66%\rProgress: 88.09%\rProgress: 88.51%\rProgress: 88.94%\rProgress: 89.36%\rProgress: 89.79%\rProgress: 90.21%\rProgress: 90.64%\rProgress: 91.06%\rProgress: 91.49%\rProgress: 91.91%\rProgress: 92.34%\rProgress: 92.77%\rProgress: 93.19%\rProgress: 93.62%\rProgress: 94.04%\rProgress: 94.47%\rProgress: 94.89%\rProgress: 95.32%\rProgress: 95.74%\rProgress: 96.17%\rProgress: 96.60%\rProgress: 97.02%\rProgress: 97.45%\rProgress: 97.87%\rProgress: 98.30%\rProgress: 98.72%\rProgress: 99.15%\rProgress: 99.57%\rProgress: 100.00%\rProgress: 100%\n",
+            "GIF done [11.67 s].\n",
+            "faces_my_example_video.gif saved.\n"
           ]
         },
         {
@@ -466,7 +483,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_1b8d93b3-6546-4d35-b1d5-2b300e286059\", \"faces_cl.gif\", 21357292)"
+              "download(\"download_14a7d09a-25f2-4f26-8160-93fe2b662ed3\", \"faces_my_example_video.gif\", 7590793)"
             ]
           },
           "metadata": {}
