--- a/Glimpsees.ipynb
+++ b/Glimpsees.ipynb
@@ -14,7 +14,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "22e38425e75f4690b8ca91f7d8f1c39a": {
+        "a8bb28e6358648e8a793d5fc22586286": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -29,14 +29,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_aa8c3c504c3142069dfd2a384c1fcc2b",
-              "IPY_MODEL_b7e40a496be94759aa1ca2d40d7630f5",
-              "IPY_MODEL_9c9925c33f3d44518aebe52089589861"
+              "IPY_MODEL_74615f4df3c7412fb6f2f5d78a7cf19d",
+              "IPY_MODEL_207cfa0a6bb542ebb42bffc4e8ad6e48",
+              "IPY_MODEL_b4381da45da5445a811143fec1a42d58"
             ],
-            "layout": "IPY_MODEL_a89785decbb04059be8d7d6db90d556d"
+            "layout": "IPY_MODEL_d27273b91cd9464e8c75fe8c274621c7"
           }
         },
-        "aa8c3c504c3142069dfd2a384c1fcc2b": {
+        "74615f4df3c7412fb6f2f5d78a7cf19d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -51,13 +51,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_e582a1c56a954317a08353f363f27321",
+            "layout": "IPY_MODEL_dcfd52994cb04a9fa7cfda2399a97377",
             "placeholder": "​",
-            "style": "IPY_MODEL_b73113885af74bbd8ca9a2616dd3b4f9",
+            "style": "IPY_MODEL_5132085e1716499c8e3a08884cc2288c",
             "value": "Tracking frames: 100%"
           }
         },
-        "b7e40a496be94759aa1ca2d40d7630f5": {
+        "207cfa0a6bb542ebb42bffc4e8ad6e48": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -73,15 +73,15 @@
             "bar_style": "",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_718a3442a21941ba8160181004e292ef",
+            "layout": "IPY_MODEL_9441def41a1d46c4a1285003fc69e28f",
             "max": 103,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_f3f062551bc44e8e986e5a8ce24cf1a4",
+            "style": "IPY_MODEL_9094c395c9be4fbfa269369cc2aa08b5",
             "value": 103
           }
         },
-        "9c9925c33f3d44518aebe52089589861": {
+        "b4381da45da5445a811143fec1a42d58": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -96,13 +96,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_904115b8882a488e9cb02d7c0f7df50c",
+            "layout": "IPY_MODEL_dfb1ef5ed46f4d519cfd15a99d22a454",
             "placeholder": "​",
-            "style": "IPY_MODEL_0ff44d9f01d745e3b437689447b904ae",
-            "value": " 103/103 [00:14&lt;00:00,  5.36it/s]"
+            "style": "IPY_MODEL_a3a797a285714050b19190198bc3a1d4",
+            "value": " 103/103 [00:12&lt;00:00,  8.92it/s]"
           }
         },
-        "a89785decbb04059be8d7d6db90d556d": {
+        "d27273b91cd9464e8c75fe8c274621c7": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -154,7 +154,7 @@
             "width": null
           }
         },
-        "e582a1c56a954317a08353f363f27321": {
+        "dcfd52994cb04a9fa7cfda2399a97377": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -206,7 +206,7 @@
             "width": null
           }
         },
-        "b73113885af74bbd8ca9a2616dd3b4f9": {
+        "5132085e1716499c8e3a08884cc2288c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -221,7 +221,7 @@
             "description_width": ""
           }
         },
-        "718a3442a21941ba8160181004e292ef": {
+        "9441def41a1d46c4a1285003fc69e28f": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -273,7 +273,7 @@
             "width": null
           }
         },
-        "f3f062551bc44e8e986e5a8ce24cf1a4": {
+        "9094c395c9be4fbfa269369cc2aa08b5": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -289,7 +289,7 @@
             "description_width": ""
           }
         },
-        "904115b8882a488e9cb02d7c0f7df50c": {
+        "dfb1ef5ed46f4d519cfd15a99d22a454": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -341,7 +341,7 @@
             "width": null
           }
         },
-        "0ff44d9f01d745e3b437689447b904ae": {
+        "a3a797a285714050b19190198bc3a1d4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -356,7 +356,7 @@
             "description_width": ""
           }
         },
-        "2fed7e1572c148e1bb4042150cc53df3": {
+        "121e9c083c0e483e929578b288433054": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -371,14 +371,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_09f82b10b9ee4ebaadbb3a2fe3b22609",
-              "IPY_MODEL_d7236c6517134c28b7c82c950528d418",
-              "IPY_MODEL_27f868f1cce84a849517b5c8759c6be9"
+              "IPY_MODEL_1d2f94664c474b6189d4841e9c100166",
+              "IPY_MODEL_65c8b51873c54738b9e2b75a06966df0",
+              "IPY_MODEL_56ea57163d57443490aab736249d2f01"
             ],
-            "layout": "IPY_MODEL_b93303b706e3488ca95a64734d6819da"
+            "layout": "IPY_MODEL_11fe76103f2c43728dc97751b8a12afe"
           }
         },
-        "09f82b10b9ee4ebaadbb3a2fe3b22609": {
+        "1d2f94664c474b6189d4841e9c100166": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -393,13 +393,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_f1d33402af7e461b9f45974d6097c7e1",
+            "layout": "IPY_MODEL_70dcffab93104c858e84ad50c0796747",
             "placeholder": "​",
-            "style": "IPY_MODEL_2b6caa234f754d92a6a3bc6ad75eda56",
+            "style": "IPY_MODEL_b1960c6017d945e6a3077e7f38c1761d",
             "value": "Loading frames: 100%"
           }
         },
-        "d7236c6517134c28b7c82c950528d418": {
+        "65c8b51873c54738b9e2b75a06966df0": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -415,15 +415,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_8ad1fbdd9f974274bf9bb3e47a90fbc9",
+            "layout": "IPY_MODEL_4e0d489084e34b18b0f655fed65b88f3",
             "max": 85,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_b308bfc7fd014a83bd84963f27336f24",
+            "style": "IPY_MODEL_d603199344b544da9074b58c8b0f2575",
             "value": 85
           }
         },
-        "27f868f1cce84a849517b5c8759c6be9": {
+        "56ea57163d57443490aab736249d2f01": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -438,13 +438,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_5c25921f4bba4ab59bc5ba9ca8b6df2d",
+            "layout": "IPY_MODEL_0a7abbb571ac41c186270a7fcad0f809",
             "placeholder": "​",
-            "style": "IPY_MODEL_3b5ed2813a0e40c4b861fdd6875bdc46",
-            "value": " 85/85 [00:00&lt;00:00, 2949.80it/s]"
+            "style": "IPY_MODEL_008859e306084d7689e0e63cc5ad5ca8",
+            "value": " 85/85 [00:00&lt;00:00, 882.42it/s]"
           }
         },
-        "b93303b706e3488ca95a64734d6819da": {
+        "11fe76103f2c43728dc97751b8a12afe": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -496,7 +496,7 @@
             "width": null
           }
         },
-        "f1d33402af7e461b9f45974d6097c7e1": {
+        "70dcffab93104c858e84ad50c0796747": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -548,7 +548,7 @@
             "width": null
           }
         },
-        "2b6caa234f754d92a6a3bc6ad75eda56": {
+        "b1960c6017d945e6a3077e7f38c1761d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -563,7 +563,7 @@
             "description_width": ""
           }
         },
-        "8ad1fbdd9f974274bf9bb3e47a90fbc9": {
+        "4e0d489084e34b18b0f655fed65b88f3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -615,7 +615,7 @@
             "width": null
           }
         },
-        "b308bfc7fd014a83bd84963f27336f24": {
+        "d603199344b544da9074b58c8b0f2575": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -631,7 +631,7 @@
             "description_width": ""
           }
         },
-        "5c25921f4bba4ab59bc5ba9ca8b6df2d": {
+        "0a7abbb571ac41c186270a7fcad0f809": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -683,7 +683,7 @@
             "width": null
           }
         },
-        "3b5ed2813a0e40c4b861fdd6875bdc46": {
+        "008859e306084d7689e0e63cc5ad5ca8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -740,9 +740,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r-0lbtofh9cA",
-        "outputId": "d4dcc138-93b7-474b-dcff-0b1c914bfc29"
+        "outputId": "1f62002b-b9a1-494e-f55e-8b49b4e03006"
       },
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,12 +771,12 @@
         "file_name = \"my_example_video.mp4\"\n",
         "square_size = 200   # Final saved image size in pixels (after resize)\n",
         "face_padding = 0.25 # Padding (%) to include around the face crop\n",
-        "resize_crop = True  # Resize face fit to square size"
+        "resize_crop = True  # Resize face to fit square size"
       ],
       "metadata": {
         "id": "kbp0QoPEehDU"
       },
-      "execution_count": 19,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -810,9 +810,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "imnWjOh8fl84",
-        "outputId": "a3102551-7886-46f0-d358-a6adaed2619e"
+        "outputId": "6da5559e-6d33-4959-986d-29ee51f018a1"
       },
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,7 +840,7 @@
         "import time\n",
         "import dlib\n",
         "import shutil\n",
-        "from tqdm.auto import tqdm\n",
+        "from tqdm.notebook import tqdm\n",
         "from google.colab import files\n",
         "\n",
         "# ==== Setup ====\n",
@@ -956,22 +956,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 84,
           "referenced_widgets": [
-            "22e38425e75f4690b8ca91f7d8f1c39a",
-            "aa8c3c504c3142069dfd2a384c1fcc2b",
-            "b7e40a496be94759aa1ca2d40d7630f5",
-            "9c9925c33f3d44518aebe52089589861",
-            "a89785decbb04059be8d7d6db90d556d",
-            "e582a1c56a954317a08353f363f27321",
-            "b73113885af74bbd8ca9a2616dd3b4f9",
-            "718a3442a21941ba8160181004e292ef",
-            "f3f062551bc44e8e986e5a8ce24cf1a4",
-            "904115b8882a488e9cb02d7c0f7df50c",
-            "0ff44d9f01d745e3b437689447b904ae"
+            "a8bb28e6358648e8a793d5fc22586286",
+            "74615f4df3c7412fb6f2f5d78a7cf19d",
+            "207cfa0a6bb542ebb42bffc4e8ad6e48",
+            "b4381da45da5445a811143fec1a42d58",
+            "d27273b91cd9464e8c75fe8c274621c7",
+            "dcfd52994cb04a9fa7cfda2399a97377",
+            "5132085e1716499c8e3a08884cc2288c",
+            "9441def41a1d46c4a1285003fc69e28f",
+            "9094c395c9be4fbfa269369cc2aa08b5",
+            "dfb1ef5ed46f4d519cfd15a99d22a454",
+            "a3a797a285714050b19190198bc3a1d4"
           ]
         },
-        "outputId": "14020afa-f01a-4f20-c91c-772e70ca9653"
+        "outputId": "8765172d-c35c-4e63-ed7d-88c6450d0817"
       },
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -982,7 +982,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "22e38425e75f4690b8ca91f7d8f1c39a"
+              "model_id": "a8bb28e6358648e8a793d5fc22586286"
             }
           },
           "metadata": {}
@@ -991,7 +991,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tracking done [14.14 s].\n",
+            "Tracking done [12.62 s].\n",
             "faces_my_example_video.zip saved.\n"
           ]
         },
@@ -1054,7 +1054,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_e227e505-d24b-4381-b7d8-55835c72dfca\", \"faces_my_example_video.zip\", 1467494)"
+              "download(\"download_d81ebd28-51b2-4646-a9da-f4a658710cd4\", \"faces_my_example_video.zip\", 1467494)"
             ]
           },
           "metadata": {}
@@ -1126,23 +1126,23 @@
           "base_uri": "https://localhost:8080/",
           "height": 84,
           "referenced_widgets": [
-            "2fed7e1572c148e1bb4042150cc53df3",
-            "09f82b10b9ee4ebaadbb3a2fe3b22609",
-            "d7236c6517134c28b7c82c950528d418",
-            "27f868f1cce84a849517b5c8759c6be9",
-            "b93303b706e3488ca95a64734d6819da",
-            "f1d33402af7e461b9f45974d6097c7e1",
-            "2b6caa234f754d92a6a3bc6ad75eda56",
-            "8ad1fbdd9f974274bf9bb3e47a90fbc9",
-            "b308bfc7fd014a83bd84963f27336f24",
-            "5c25921f4bba4ab59bc5ba9ca8b6df2d",
-            "3b5ed2813a0e40c4b861fdd6875bdc46"
+            "121e9c083c0e483e929578b288433054",
+            "1d2f94664c474b6189d4841e9c100166",
+            "65c8b51873c54738b9e2b75a06966df0",
+            "56ea57163d57443490aab736249d2f01",
+            "11fe76103f2c43728dc97751b8a12afe",
+            "70dcffab93104c858e84ad50c0796747",
+            "b1960c6017d945e6a3077e7f38c1761d",
+            "4e0d489084e34b18b0f655fed65b88f3",
+            "d603199344b544da9074b58c8b0f2575",
+            "0a7abbb571ac41c186270a7fcad0f809",
+            "008859e306084d7689e0e63cc5ad5ca8"
           ]
         },
         "id": "hM6qJibt4WcI",
-        "outputId": "5dcfb659-7622-402d-872d-b14f63e6b301"
+        "outputId": "192b9365-bcee-400c-8d02-164229e975c5"
       },
-      "execution_count": 22,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1153,7 +1153,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "2fed7e1572c148e1bb4042150cc53df3"
+              "model_id": "121e9c083c0e483e929578b288433054"
             }
           },
           "metadata": {}
@@ -1162,7 +1162,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Done [4.22 s].\n",
+            "Done [4.89 s].\n",
             "faces_my_example_video.gif saved.\n"
           ]
         },
@@ -1225,7 +1225,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_301fc7eb-39ac-4039-a21b-3a5b55557b53\", \"faces_my_example_video.gif\", 2915964)"
+              "download(\"download_8fac2c4e-67d6-46f3-9c6f-c9b9b5df8c6e\", \"faces_my_example_video.gif\", 2915964)"
             ]
           },
           "metadata": {}
